2008-06-28  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Better behavior of hilighs for app menu item
	* ApplicationMenuItem.cs: More work on proper app menu item behavior
	  (hilights)

2008-06-28  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Fix them code for app menu item
	* ApplicationMenuItem.cs: Bug fixes
	* ApplicationMenu.cs: Remove debug code

2008-06-27  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenu.cs: Bugfix, can now open app menu multiple times

2008-06-27  Laurent Debacker <debackerl@gmail.com> 

	* QuickAccessToolbar.cs, FlowLayoutContainer.cs: Bugfix in remove
	* Theme.cs, ApplicationMenuItem.cs: API update
	* ApplicationMenu.cs: Lot of work to solve the rendering bug. It is now
	  gone, but I cannot open the menu more than once...

2008-06-27  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Initial theme code for app menu item borowed from button
	* ApplicationMenuItem.cs: Size alloc, size request, drawing
	* ApplicationMenu.cs: Bug fix in size alloc

2008-06-26  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenu.cs: Autohide the app menu when required

2008-06-26  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Updated for new app menu API
	* ApplicationMenuItem.cs, ApplicationMenu.cs: Major refactoring
	* ApplicationButton.cs: Update for new App menu API

2008-06-26  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenu.cs: Compilation bug fixes, sorry

2008-06-26  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Dummy renderer for App menu and app menu item
	* ApplicationMenu.cs: More work on app menu item

2008-06-25  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationButton.cs: Bugfixes for popup position, and misc other bug
	  fixes

2008-06-24  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenu.cs: Implementation of SizeAllocated for app menu, and more
	  work on SizeRequest

2008-06-24  Laurent Debacker <debackerl@gmail.com> 
